# Eaquel_Redirector

./: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
Gradle/: libs.versions.toml
Redirector/: build.gradle.kts
Redirector/Source/Main/: AndroidManifest.xml
Redirector/Source/Main/Bridge/: CMakeLists.txt  Redirector.cpp  Redirector.hpp
